# comfyui-utils

./: .gitignore  AGENTS.md  README.md  __init__.py  helto_image_selector.py  package.json  pyproject.toml  requirements.txt
docs/: privacy-show-any-managed-privacy.md  private-media-managed-leases.md  prompt-enhancer-managed-privacy.md  queue-manager-managed-privacy.md  selector-managed-artifacts.md  selector-managed-workflow.md
helto_selector_backend/: __init__.py  constants.py  crypto.py  image_processing.py  managed_artifacts.py  managed_migration.py  managed_workflow.py  mask_storage.py  node.py  routes.py  scanning.py  services.py  thumbnail_cache.py
shared/: __init__.py  managed_privacy.py  managed_privacy_execution.py  managed_privacy_routes.py  pause_release.py  privacy.py  privacy_show_any_managed.py  privacy_show_any_migration.py  privacy_show_any_text.py  private_json.py  private_media_managed.py  private_media_routes.py  progress_api.py  queue_manager_managed.py  queue_manager_managed_migration.py  queue_manager_routes.py  queue_manager_store.py  temp_cache.py  video_params.py
tests/: conftest.py  test_backend.py  test_load_video_browser.py  test_media_nodes_managed.py  test_privacy.py  test_privacy_show_any_managed_privacy.py  test_private_media_managed.py  test_progress_api.py  test_prompt_enhancer.py  test_prompt_enhancer_managed_privacy.py  test_queue_manager_managed.py  test_queue_manager_store.py  test_selector_managed_artifacts.py  test_selector_managed_workflow.py  test_utils_managed_privacy_activation.py
web/: api.js  constants.js  dom.js  helto_node_theme.js  helto_theme.js  hide_mode_helpers.js  image_comparer_hover.js  layout.js  load_video.js  managed_mode_transition.js  managed_privacy.js  managed_privacy_contract.js  mask_editor.js  media_preview.js  node_layout_toolbar.js  node_layout_tools.js  pause_control_helpers.js  (+22 more)
(+43 files in other folders)
