[project]
name = "comfyui-utils"
version = "0.1.0"
description = "Helto ComfyUI workflow utilities and managed privacy features."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "helto-privacy @ git+https://github.com/helto4real/helto-privacy.git@2e85c71f9aa22bd47ee6f13f2add83d111ab4591",
    "cryptography>=42.0",
]

[project.urls]
Repository = "https://github.com/helto4real/comfyui-utils"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.comfy]
PublisherId = "helto"
DisplayName = "Helto ComfyUI Utils"
Icon = ""
web = "web"
