[project]
name = "comfyui-utils"
version = "0.1.3"
description = "Helto ComfyUI workflow utilities and managed privacy features."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "helto-privacy==0.4.3",
    "cryptography>=42.0",
]

[project.urls]
Repository = "https://github.com/helto4real/comfyui-utils"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.comfy]
PublisherId = "helto"
DisplayName = "Helto ComfyUI Utils"
Icon = ""
web = "web"
